# web-trendradar

./: .gitignore  CLAUDE.md  README.md  ai_analyzer.py  db.py  db_pg.py  db_rest.py  db_sqlite.py  launch.py  main.py  migration.sql  pyproject.toml  spider.py
.github/workflows/: crawl.yml
.streamlit/: config.toml
docs/: design.md  散点图待实现功能.md  趋势图表重构方案.md
